--- a/code/src/revel_jwt_mysql/conf/app.conf
+++ b/code/src/revel_jwt_mysql/conf/app.conf
@@ -35,8 +35,8 @@ module.static=github.com/revel/modules/static
 mode.dev=true
 watch=true
 module.testrunner=github.com/revel/modules/testrunner
-db.uri  = "172.17.0.1:3306"
-db.name = "robohonapp"
+db.uri  = "172.17.0.2:3306"
+db.name = "revel_jwt_mysqlapp"
 
 [prod]
 watch=false
